# golf-smart

./: CMakeLists.txt  CenterPoints.csv  README.md  package.xml
config/: digital_twin.rviz  plot_jointspace.perspective
launch/: t1_initialize.launch  t1_swing.launch  t2_analysis.launch
scripts/: CenterPoint.csv  CenterPoints.csv  DifferentCenterSwings.py  MakeDifferentCenterFile.py  NewSwing.ipynb  RobotVectors.py  RobotVectors2.py  buildSwingPath_Tophat.py  buildSwingPath_gauss.py  generate_CenterPoints.py  golf_swing.py  makeSwing.ipynb  makeSwing.py  simple_trajectory_from_file.py  smart_golf_utilities.py  swingRobot.py  swing_centerPointVariations.py  swing_superPoints_wfigures.py  toZero.py  trajectory_action_client.py  variableSwings_old.py
